# WeeklyScript

./: CMakeLists.txt  OsTypes.h  OsUtils.cpp  OsUtils.h  OsuReplayParser.cpp  README.md  ReplayParser.cpp  ReplayParser.h  action.cpp  action.h  inputTable.txt  main.cpp  mainGet.cpp  mainGet.h  setget.cpp  setget.h  step.cpp  step.h  weeklyConfig.txt
Beta/: mainBeta.cpp
reqfiles/: weeklyConfig.txt
